styles(a11y): increase form label z-index to fix Firefox autofill layering

--- a/src/scss/stacked/02_molecules-components/form/_li.scss
+++ b/src/scss/stacked/02_molecules-components/form/_li.scss
@@ -23,6 +23,10 @@
         }
       }
 
+      label {
+        z-index: 1;
+      }
+
       &.input--active {
         label {
           font-size: 12px;
